MLP have to think about it

--- a/python/test_demo.ipynb
+++ b/python/test_demo.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "6c0ade93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymicrograd import Value"
+    "from pymicrograd import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "358459a0",
    "metadata": {},
    "outputs": [
@@ -20,16 +20,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Error: graph.dot: syntax error in line 5 near '|'\n"
+      "Error: graph.dot: syntax error in line 7 near '|'\n",
+      "The file /Users/jaczac/Github/Micrograd_C++/python/graph.svg does not exist.\n"
      ]
     }
    ],
    "source": [
-    "a = Value(10.0)\n",
-    "b = Value(5.0)\n",
-    "c += a * b\n",
-    "c.backward()\n",
-    "c.draw_graph()"
+    "n = Layer(2,3)\n",
+    "x = [Value(2.0, \"frst\"),Value(3.0, \"second\")]\n",
+    "y = n(x)\n",
+    "y[0].backward()\n",
+    "y[0].draw_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "42420eec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(data=0.309582, grad=1, label=)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y[0]"
    ]
   }
  ],
