MLP not working and draw

--- a/python/test_demo.ipynb
+++ b/python/test_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "6c0ade93",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "358459a0",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "n = Layer(2,3)\n",
+    "n = Neuron(2,3)\n",
     "x = [Value(2.0, \"frst\"),Value(3.0, \"second\")]\n",
     "y = n(x)\n",
     "y[0].backward()\n",
@@ -35,17 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "42420eec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Value(data=0.309582, grad=1, label=)"
+       "Value(data=-0.132288, grad=1, label=)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
